--- a/index.html
+++ b/index.html
@@ -344,9 +344,10 @@
 
       <div class="col">
 
-        <div class="card edu feature feature-box">
+        <div class="card edu feature feature-box" >
 
           <div class="card-body">
+
             <i class="fas fa-award"></i>
             <div class="text">
               HSC</div>
@@ -354,6 +355,7 @@
               2016<br> Completed highschool education form
               <br>R L T College Of Science Akola.
             </p>
+              <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/12th.jpg" herf="#">click here : Certificate</a><br>
 
           </div>
         </div>
@@ -368,6 +370,7 @@
               SSC</div>
             <p>
               2014<br> Completed secoundary school education form <br>N N Mundada High School.</p>
+              <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/10th.jpg" herf="#">click here : Certificate</a><br>
 
           </div>
         </div>
