--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <section class="aboutsection" id="about">
     <h2 class="heading-center">About Me!</h2>
     <h3 class="cta-heading">I'm Vaishnavi Sharma. <br /><br />I'm from Washim, Maharashtra, India. <br />Currently, I'm pursuing post-graduation in Computer Application from Modern College of Science Shivajinagar, Pune. <br />I am doing 6 months of
-      Internship as Web Development from 23 dec 2020 to 23 June 2021.<br /> I am Fresher-2021 and searching for the job, this is my updated resume please download it. <br />I can join immediately. Thank you! </h3>
+      Internship in Web Development from 23 dec 2020 to 23 June 2021.<br /> I am Fresher-2021 and searching for the job, this is my updated resume please download it. <br />I can join immediately. Thank you! </h3>
     <a class="cv btn btn-outline-dark btn-lg download-btn" onClick="openTab(this)" herf="#" name="public/images/VaishnaviSharma_Resume.pdf"> <i class="fas fa-file-contract"></i> Download Resume</a>
 
   </section>
