--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@
     <!-- about me section -->
   </section>
   <section class="aboutsection" id="about">
-    <h2 class="heading-center">About Me!</h2>
-    <h3 class="cta-heading">I'm Vaishnavi Sharma. <br /><br />I'm from Washim, Maharashtra, India. <br />Currently, I'm pursuing post-graduation in Computer Application from Modern College of Science Shivajinagar, Pune. <br />I am doing 6 months of
-      Internship in Web Development from 23 dec 2020 to 23 June 2021.<br /> I am Fresher-2021 and searching for the job, this is my updated resume please download it. <br />I can join immediately. Thank you! </h3>
+    <h2 class="heading-center">About Me</h2>
+    <h3 class="cta-heading">I'm Vaishnavi Sharma. <br /><br />I'm from Malegaon (Washim), Maharashtra, India. <br />Currently, I'm pursuing post-graduation in Computer Application from Modern College of Science Shivajinagar, Pune. <br />I am doing 6 months of
+      Internship as Web Development from 23 dec 2020 to 23 June 2021.<br /> I am Fresher-2021 and searching for the job, this is my updated resume please download it. <br />I can join immediately. Thank you! </h3>
     <a class="cv btn btn-outline-dark btn-lg download-btn" onClick="openTab(this)" herf="#" name="public/images/VaishnaviSharma_Resume.pdf"> <i class="fas fa-file-contract"></i> Download Resume</a>
 
   </section>
 
   <!-- experience section -->
   <section class="experience" id="experience">
-    <h2 class="heading-center">My Experience!</h2>
+    <h2 class="heading-center">My Experience</h2>
     <div class="row">
       <div class="row align-items-md-stretch">
-        <div class="col-md-6 expe">
-          <div class="h-100 p-5 card edu feature feature-box">
+        <div class="col-md-12  col-lg-6 col-sm-12 expe">
+          <div class="h-100 p-5 card edu feature-box">
             <h2>Comapny Name</h2>
             <p>Supero Software Private Limited</p>
             <p>Pursuing: Till 23 June 2021</p>
@@ -146,7 +146,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 expe">
+        <div class="col-md-12 col-lg-6 col-sm-12 expe">
           <div class="h-100 p-5 card edu feature feature-box">
             <h2>Comapny Name</h2>
             <p>Global Counter Terrorism Council</p>
@@ -163,7 +163,7 @@
   </section>
 
   <section class="skill-certificate " id="skills">
-    <h2 class="heading-center">My Skills!</h2>
+    <h2 class="heading-center-experience">My Skills</h2>
     <div class="row" data-masonry="{&quot;percentPosition&quot;: true }" style="position: relative; height: 773.334px;">
 
       <div class="col-sm-6 col-lg-4 mb-4" style="position: absolute; left: 0%; top: 0px;">
@@ -337,6 +337,7 @@
               Bachelor's Degree</div>
             <p>
               2016-2019<br> Completed Bachelor's in Computer Science form R A College Washim.</p>
+              <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/bsc-certificate.jpg" herf="#" style="color: #fff; font-size: 1.2rem; font-family: 'Lobster', cursive;">click here : Certificate</a><br>
 
           </div>
         </div>
@@ -355,7 +356,7 @@
               2016<br> Completed highschool education form
               <br>R L T College Of Science Akola.
             </p>
-              <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/12th.jpg" herf="#">click here : Certificate</a><br>
+              <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/12th.jpg" herf="#" style="color: #fff; font-size: 1.2rem; font-family: 'Lobster', cursive";>click here : Certificate</a><br>
 
           </div>
         </div>
@@ -370,7 +371,7 @@
               SSC</div>
             <p>
               2014<br> Completed secoundary school education form <br>N N Mundada High School.</p>
-              <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/10th.jpg" herf="#">click here : Certificate</a><br>
+              <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/10th.jpg" herf="#" style="color: #fff; font-size: 1.2rem; font-family: 'Lobster', cursive";>click here : Certificate</a><br>
 
           </div>
         </div>
@@ -430,7 +431,7 @@
     <h2 class="heading-center">Contact me</h2>
 
 
-<div class="heading-center">Contact me through Email, Phone-number and other social media platforms.</div>
+<div class="heading-center small">Contact me through Email, Phone-number and other social media platforms.</div>
 
 <div class="row">
 <i class="icon-feature fas fa-user-tie fa-2x"></i> &nbsp &nbsp &nbsp
@@ -439,11 +440,14 @@
 
         <div class="row">
           <i class="icon-feature fas fa-map-marked-alt fa-2x"></i>&nbsp &nbsp &nbsp
-        <p class="contact-content">Address:&nbsp &nbsp Deshpande Plot Malegaon, Dist. Washim 444503  </p>
+        <p class="contact-content">Address:&nbsp &nbsp  </p> <p class="contact-content">
+
+    Deshpande Plot Malegaon, Dist. Washim 444503 </p>
 
           </div>
 
-
+<br />
+<br />
           <div class="row">
             <i class="icon-feature fas fa-mail-bulk fa-2x"></i>&nbsp &nbsp &nbsp
 <p class="contact-content">Email:&nbsp &nbsp <a class="skill1" href="mailto:vaishnavisharma0045@gmail.com">vaishnavisharma0045@gmail.com</a></p>
