--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <!-- Title -->
     <div class="row header">
 
-      <div class="col-lg-6">
+       <div class="col-md-12 col-lg-6 col-sm-12 ">
         <h1 class="color">Hello there!</h1>
         <h1 class="color">I am Vaishnavi Sharma</h1>
 
