--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <!-- Title -->
     <div class="row header">
 
-       <div class="col-md-12 col-lg-6 col-sm-12 ">
+      <div class="col-lg-6">
         <h1 class="color">Hello there!</h1>
         <h1 class="color">I am Vaishnavi Sharma</h1>
 
@@ -112,15 +112,17 @@
 
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-12 col-lg-6 col-sm-12 ">
         <img class="title-image " src="public/images/profile2.jpg" alt="vaishnavi">
       </div>
+    </div>
     </div>
     <!-- about me section -->
   </section>
   <section class="aboutsection" id="about">
-    <h2 class="heading-center">About Me</h2>
-    <h3 class="cta-heading">I'm Vaishnavi Sharma. <br /><br />I'm from Malegaon (Washim), Maharashtra, India. <br />Currently, I'm pursuing post-graduation in Computer Application from Modern College of Science Shivajinagar, Pune. <br />I am doing 6 months of
+    <h2 class="heading-center large2">About Me</h2>
+    <h3 class="cta-heading">I'm Vaishnavi Sharma. <br /><br />I'm from Malegaon (Washim), Maharashtra, India. <br />Currently, I'm pursuing post-graduation in Computer Application from Modern College of Science Shivajinagar, Pune. <br />I am doing 6
+      months of
       Internship as Web Development from 23 dec 2020 to 23 June 2021.<br /> I am Fresher-2021 and searching for the job, this is my updated resume please download it. <br />I can join immediately. Thank you! </h3>
     <a class="cv btn btn-outline-dark btn-lg download-btn" onClick="openTab(this)" herf="#" name="public/images/VaishnaviSharma_Resume.pdf"> <i class="fas fa-file-contract"></i> Download Resume</a>
 
@@ -128,16 +130,16 @@
 
   <!-- experience section -->
   <section class="experience" id="experience">
-    <h2 class="heading-center">My Experience</h2>
+    <h2 class="heading-center large2">My Experience</h2>
     <div class="row">
       <div class="row align-items-md-stretch">
         <div class="col-md-12  col-lg-6 col-sm-12 expe">
           <div class="h-100 p-5 card edu feature-box">
-            <h2>Comapny Name</h2>
-            <p>Supero Software Private Limited</p>
-            <p>Pursuing: Till 23 June 2021</p>
-            <p>Position: Node.js Developer, Web Developer, Project Manager</p>
-            <p>Projects: HouseHear, Hashcode</p>
+            <h2 class="large">Comapny Name</h2>
+            <p class="large">Supero Software Private Limited</p>
+            <p class="large">Pursuing: Till 23 June 2021</p>
+            <p class="large">Position: Node.js Developer, Web Developer, Project Manager</p>
+            <p class="large">Projects: HouseHear, Hashcode</p>
             <a class="cv btn btn-outline-light btn-lg download-btn" onClick="openTab(this)" name="public/images/SuperoSoftware-company certificate.pdf" herf="#">Certificate</a><br>
 
             <div class="button">
@@ -148,10 +150,10 @@
         </div>
         <div class="col-md-12 col-lg-6 col-sm-12 expe">
           <div class="h-100 p-5 card edu feature feature-box">
-            <h2>Comapny Name</h2>
-            <p>Global Counter Terrorism Council</p>
-            <p>1 month Nov 2020</p>
-            <p>Position: Web Developer, WordPress Developer</p>
+            <h2 class="large">Comapny Name</h2>
+            <p class="large">Global Counter Terrorism Council</p>
+            <p class="large">1 month Nov 2020</p>
+            <p class="large">Position: Web Developer, WordPress Developer</p>
 
             <a class="cv btn btn-outline-light btn-lg download-btn" onClick="openTab(this)" name="public/images/GCTC-Certificate.pdf" herf="#">Certificate</a><br>
 
@@ -163,18 +165,19 @@
   </section>
 
   <section class="skill-certificate " id="skills">
-    <h2 class="heading-center-experience">My Skills</h2>
+    <h2 class="heading-center-experience large2">My Skills</h2>
     <div class="row" data-masonry="{&quot;percentPosition&quot;: true }" style="position: relative; height: 773.334px;">
 
-      <div class="col-sm-6 col-lg-4 mb-4" style="position: absolute; left: 0%; top: 0px;">
+      <div class="col-sm-6 col-lg-4 mb-1" style="position: absolute; left: 0%; top: 0px;">
         <div class="card">
           <div class="card-body">
-            <img class="skill-image " src="public/images/web-Development-Certificate.jpg" alt="Web Devlopment" onClick="openTab(this)" name="public/images/web-Development-Certificate.jpg" herf="#" style="cursor: pointer; transition: all 0.3s ease;">
+            <img class="skill-image  large-img" src="public/images/web-Development-Certificate.jpg" alt="Web Devlopment" onClick="openTab(this)" name="public/images/web-Development-Certificate.jpg" herf="#"
+              style="cursor: pointer; transition: all 0.3s ease;">
             <a class="btn btn-link" onClick="openTab(this)" name="public/images/web-Development-Certificate.jpg" herf="#">click here to view</a>
           </div>
           <div class="card-body">
 
-            <p class="card-text skill1">
+            <p class="card-text skill1 large3">
               <b>Web Development Bootcamp</b><br /><br />
               I have learn HTML, CSS, BootStrap4, JavaScript, JS Frameworks Like: Jquery, Node.js, Express.js, React.js. etc. <br />
               Thanks to Instructor Dr. Angela Yu for making fantastic course and easy to learn.This course helped me to learn Full Stack Development
@@ -186,7 +189,7 @@
 
       <div class="col-sm-6 col-lg-4 mb-4" style="position: absolute; left: 33.3333%; top: 0px;">
         <div class="card p-3">
-          <p class="skill1"><b>Skills in databases:</b><br /> SQL, MongoDB, Firebase, Google Cloud. </p>
+          <p class="skill1 large3"><b>Skills in databases:</b><br /> SQL, MongoDB, Firebase, Google Cloud. </p>
 
 
 
@@ -195,13 +198,13 @@
       <div class="col-sm-6 col-lg-4 mb-4" style="position: absolute; left: 0%; top: 0px;">
         <div class="card">
           <div class="card-body">
-            <img class="skill-image " src="public/images/java-certificate.jpg" alt="Core Java" onClick="openTab(this)" name="public/images/java-certificate.jpg" herf="#" style="cursor: pointer; transition: all 0.3s ease;">
+            <img class="skill-image  large-img " src="public/images/java-certificate.jpg" alt="Core Java" onClick="openTab(this)" name="public/images/java-certificate.jpg" herf="#" style="cursor: pointer; transition: all 0.3s ease;">
             <a class="btn btn-link" onClick="openTab(this)" name="public/images/java-certificate.jpg" herf="#">click here to view</a>
 
           </div>
 
           <div class="card-body skill1">
-            <p class="skill1">The complete Core Java Certificate</p>
+            <p class="skill1 large3">The complete Core Java Certificate</p>
           </div>
 
         </div>
@@ -210,7 +213,7 @@
         <div class="card text-center p-3">
           <figure class="mb-0">
             <blockquote class="blockquote">
-              <p class="skill1"><b>Skills In Python:</b> <br /> Virtual Assistant Model <br /> Object Tracking Model <br />Face Detection Model <br /> Face recognition + Attendance model. </p>
+              <p class="skill1 large3"><b>Skills In Python:</b> <br /> Virtual Assistant Model <br /> Object Tracking Model <br />Face Detection Model <br /> Face recognition + Attendance model. </p>
             </blockquote>
 
           </figure>
@@ -219,7 +222,7 @@
       <div class="col-sm-6 col-lg-4 mb-4" style="position: absolute; left: 33.3333%; top: 369.334px;">
         <div class="card text-center">
           <div class="card-body">
-            <p class="skill1" class="card-text">
+            <p class="skill1 large3" class="card-text">
               <b>Node.js</b><br />
               I have worked as Node.js Developer in an Internship<br />
               <b>HouseHear Project</b>
@@ -231,7 +234,7 @@
       <div class="col-sm-6 col-lg-4 mb-4" style="position: absolute; left: 66.6667%; top: 402px;">
         <div class="card">
           <div class="card-body">
-            <img class="skill-image " src="public/images/GreatLearning-Certificate.jpg" alt="Java OOPS" onClick="openTab(this)" name="public/images/GreatLearning-Certificate.jpg" herf="#" style="cursor: pointer; transition: all 0.3s ease;">
+            <img class="skill-image large-img " src="public/images/GreatLearning-Certificate.jpg" alt="Java OOPS" onClick="openTab(this)" name="public/images/GreatLearning-Certificate.jpg" herf="#" style="cursor: pointer; transition: all 0.3s ease;">
 
           </div>
 
@@ -240,7 +243,7 @@
       <div class="col-sm-6 col-lg-4 mb-4" style="position: absolute; left: 0%; top: 410px;">
         <div class="card p-3 text-end">
 
-          <p class="skill1" class="card-text"><b>Vue.js and Nuxt.js</b><br />
+          <p class="skill1 large3" class="card-text"><b>Vue.js and Nuxt.js</b><br />
             I have worked as Project Manager in an Internship</p>
           <p class="skill1" class="card-text"><b>Hashcodec Project</b><br />
             The website named Hashcocdec is built in Vue.js, Nuxt.js, Node.js. </p>
@@ -254,15 +257,15 @@
   <!-- Testimonials -->
   <section class="testimonials" id="projects">
     <br />
-    <div class="heading-center">My Projects!</div>
+    <div class="heading-center large2">My Projects</div>
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
 
-        <div class="carousel-item test1 active">
-          <p>College Level (M.S.c 3rd SEM) </p>
-          <h2>Virtual Assistant works on Voice Command</h2>
-          <p>May 2020 – present</p>
-          <p>A Virtual Assistant is working on voice command, Do usual things
+        <div class="carousel-item test1  active">
+          <p class="large">College Level (M.S.c 3rd SEM) </p>
+          <h2 class="large3">Virtual Assistant works on Voice Command</h2>
+          <p class="large3">May 2020 – present</p>
+          <p class="large3">A Virtual Assistant is working on voice command, Do usual things
             like Taking Notes, detect Face, Save Detected person name in
             database in CSV file, working on Computer Files like Open Close
             Operations, etc.
@@ -270,22 +273,22 @@
         </div>
 
         <div class="carousel-item test1">
-          <p>College Level (M.S.c 2nd SEM) </p>
-          <h2>Object Tracking in Real-time Using OpenCV Python </h2>
-          <p>Jun 2020 – Present.</p>
-          <p>In this mini project, we can select the object
+          <p class="large">College Level (M.S.c 2nd SEM) </p>
+          <h2 class="large3">Object Tracking in Real-time Using OpenCV Python </h2>
+          <p class="large3">Jun 2020 – Present.</p>
+          <p class="large3">In this mini project, we can select the object
             and track the real-time while object detecting it shows
             TRACKING on-screen and if we lost the object it will show LOST
             on the screen. </p>
         </div>
 
         <div class="carousel-item test1">
-          <h2>Clone Website</h2>
+          <p class="large">Clone Website</p>
           <a class=" btn btn-outline-light btn-lg website-link" onClick="openTab(this)" name="https://vaishnavi636.github.io/Flower-Selling-Website/" herf="#">WebSite Link</a><br>
 
 
-          <p>Present</p>
-          <p>Description: Developing offline in Node.js.</p>
+          <p class="large3">Present</p>
+          <p class="large3">Description: Developing offline in Node.js.</p>
         </div>
       </div>
 
@@ -306,11 +309,10 @@
 
   <!-- education -->
   <section class="pricing" id="education">
-    <!-- <h2>A plan for every function you want to make special with colorful flowers.</h2>
-    <p>Simple and affordable price plans for all Functions.</p> -->
-    <h2 class="heading-center">My Education!</h2>
 
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+    <h2 class="heading-center large2">My Education!</h2>
+
+    <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-4">
 
       <div class="col">
 
@@ -319,8 +321,11 @@
           <div class="card-body">
             <i class="fas fa-graduation-cap"></i>
             <div class="text">
-              Master's Degree</div>
-            <p>
+              <p class="large4">
+                Master's Degree
+              </p>
+            </div>
+            <p class="large5">
               2019-2021<br> Pursuing Master's in Computer Science form Modern College Pune.
             </p>
           </div>
@@ -334,10 +339,13 @@
           <div class="card-body">
             <i class="fas fa-user-graduate"></i>
             <div class="text">
-              Bachelor's Degree</div>
-            <p>
+              <p class="large4">
+                Bachelor's Degree
+              </p>
+            </div>
+            <p class="large5">
               2016-2019<br> Completed Bachelor's in Computer Science form R A College Washim.</p>
-              <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/bsc-certificate.jpg" herf="#" style="color: #fff; font-size: 1.2rem; font-family: 'Lobster', cursive;">click here : Certificate</a><br>
+            <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/bsc-certificate.jpg" herf="#" style="color: #fff; font-size: 1.2rem; font-family: 'Lobster', cursive;">click here : Certificate</a><br>
 
           </div>
         </div>
@@ -345,18 +353,21 @@
 
       <div class="col">
 
-        <div class="card edu feature feature-box" >
+        <div class="card edu feature feature-box">
 
           <div class="card-body">
 
             <i class="fas fa-award"></i>
             <div class="text">
-              HSC</div>
-            <p>
+              <p class="large4">
+                HSC
+              </p>
+            </div>
+            <p class="large5">
               2016<br> Completed highschool education form
               <br>R L T College Of Science Akola.
             </p>
-              <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/12th.jpg" herf="#" style="color: #fff; font-size: 1.2rem; font-family: 'Lobster', cursive";>click here : Certificate</a><br>
+            <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/12th.jpg" herf="#" style="color: #fff; font-size: 1.2rem; font-family: 'Lobster', cursive" ;>click here : Certificate</a><br>
 
           </div>
         </div>
@@ -368,29 +379,33 @@
           <div class="card-body">
             <i class="fas fa-book-reader"></i>
             <div class="text">
-              SSC</div>
-            <p>
+              <p class="large4">
+                SSC
+              </p>
+            </div>
+            <p class="large5">
               2014<br> Completed secoundary school education form <br>N N Mundada High School.</p>
-              <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/10th.jpg" herf="#" style="color: #fff; font-size: 1.2rem; font-family: 'Lobster', cursive";>click here : Certificate</a><br>
+            <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/10th.jpg" herf="#" style="color: #fff; font-size: 1.2rem; font-family: 'Lobster', cursive" ;>click here : Certificate</a><br>
 
           </div>
         </div>
       </div>
     </div>
 
+
   </section>
 
   <!-- Activities -->
 
   <section class="features" id="activities">
-    <h2 class="heading-center">Other Activities</h2>
+    <h2 class="heading-center large2">Other Activities</h2>
 
     <div class="row">
 
       <div class=" feature-box col-lg-4">
         <i class=" icon-feature fas fa-futbol fa-4x"></i>
-        <h3 class="feature-text">Football and other Sports</h3>
-        <p class="feather-links">3 times States:<br />Certificates <br /><small>click buttons to view certificates</small></p>
+        <h3 class="feature-text large">Football and other Sports</h3>
+        <p class="feather-links large">3 times States:<br />Certificates <br /><small>click buttons to view certificates</small></p>
 
         <a class=" btn btn-outline-light btn-lg feature-certificate" onClick="openTab(this)" name="public/images/1.jpeg" herf="#">1</a>
         <a class=" btn btn-outline-light btn-lg  feature-certificate" onClick="openTab(this)" name="public/images/2.jpeg" herf="#">2</a>
@@ -403,8 +418,8 @@
       </div>
       <div class="feature-box col-lg-4">
         <i class="icon-feature fas fa-award  fa-4x"></i>
-        <h3 class="feature-text">Compitation Participation</h3>
-        <p class="feather-links">Certificates<br /><small>click buttons to view certificates</small></p>
+        <h3 class="feature-text large">Compitation Participation</h3>
+        <p class="feather-links large">Certificates<br /><small>click buttons to view certificates</small></p>
         <a class="  btn btn-outline-light btn-lg  feature-certificate" onClick="openTab(this)" name="public/images/6.jpeg" herf="#">1</a>
         <a class="  btn btn-outline-light btn-lg  feature-certificate" onClick="openTab(this)" name="public/images/7.jpeg" herf="#">2</a>
         <a class="  btn btn-outline-light btn-lg  feature-certificate" onClick="openTab(this)" name="public/images/8.jpeg" herf="#">3</a>
@@ -414,8 +429,8 @@
 
       <div class="feature-box col-lg-4 ">
         <i class="icon-feature fas fa-certificate fa-4x "></i>
-        <h3 class="feature-text">Course, Activity</h3>
-        <p class="feather-links">Certificates <br /><small>click buttons to view certificates</small> </p>
+        <h3 class="feature-text large">Course, Activity</h3>
+        <p class="feather-links large">Certificates <br /><small>click buttons to view certificates</small> </p>
         <a class="  btn btn-outline-light btn-lg feature-certificate" onClick="openTab(this)" name="public/images/10.jpg" herf="#">1</a>
         <a class="  btn btn-outline-light btn-lg feature-certificate" onClick="openTab(this)" name="public/images/11.jpeg" herf="#">2</a>
         <a class="  btn btn-outline-light btn-lg feature-certificate" onClick="openTab(this)" name="public/images/12.jpeg" herf="#">3</a>
@@ -428,7 +443,7 @@
   <!-- contact section -->
 
   <section class="contact" id="contact">
-    <h2 class="heading-center">Contact me</h2>
+    <h2 class="heading-center large2">Contact me</h2>
 
 
 <div class="heading-center small">Contact me through Email, Phone-number and other social media platforms.</div>
@@ -463,23 +478,23 @@
             <a href="https://www.instagram.com/vaishu4455/" target="_blank" class="fa-2x icon-feature  fa fa-instagram" style="font-size:25px"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://www.youtube.com/channel/UCGgieCJkhwenNs08-xqY1ZA" target="_blank" class="fa-2x icon-feature  fa fa-youtube" style="font-size:25px"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://github.com/vaishnavi636" target="_blank" class="fa-2x icon-feature  fa fa-github" style="font-size:25px"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="https://www.facebook.com/profile.php?id=100024550990507" target="_blank" class="fa-2x icon-feature  fa fa-facebook" style="font-size:25px"></a>
+            <a href="https://www.facebook.com/profile.php?id=100024550990507" target="_blank" class="fa-2x icon-feature  fa fa-facebook" style="font-size:25px"></a><br />
+
             <br />
 
 
           </div>
-          <p class="footer">I am open for any suggestion or just to have a chat</p>
 
-
-        <span>Created By <a href="#home">Vaishnavi Sharma</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+  <p class="heading-center">I am open for any suggestion or just to have a chat</p>
   </p>
 
 
 
   </section>
   <!-- Footer -->
-
-
+<p class="footer">
+<span>Created By <a href="#home">Vaishnavi Sharma</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+</p>
 
 </body>
 
