--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
 
       <div class="col-md-12 col-lg-6 col-sm-12 ">
-        <img class="title-image " src="public/images/profile2.jpg" alt="vaishnavi">
+        <img class="title-image " src="public/images/FrontScreen.jpg" alt="vaishnavi">
       </div>
     </div>
     </div>
