--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <h1 class="color">Hello there!</h1>
         <h1 class="color">I am Vaishnavi Sharma</h1>
 
-        <h2 class="head">I'm a Software Developer</h2>
+        <h2 class="head">I'm a Software Developer at Capgemini</h2>
 
 
       </div>
