--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
               </p>
             </div>
             <p class="large5">
-              2016-2019<br> Completed Bachelor's in Computer Science form R A College Washim.</p>
+              2016-2019<br> Completed Bachelor's in Computer Science form R A College.</p>
             <a class="btn btn-outline-link" onClick="openTab(this)" name="public/images/bsc-certificate.jpg" herf="#" style="color: #fff; font-size: 1.2rem; font-family: 'Lobster', cursive;">click here : Certificate</a><br>
 
           </div>
@@ -475,9 +475,7 @@
 
         <div class="row">
           <i class="icon-feature fas fa-map-marked-alt fa-2x"></i>&nbsp &nbsp &nbsp
-        <p class="contact-content">Address:&nbsp &nbsp  </p> <p class="contact-content">
-
-    Deshpande Plot Malegaon, Dist. Washim 444503 </p>
+        <p class="contact-content">Address:&nbsp &nbsp  </p> <p class="contact-content">Pune </p>
 
           </div>
 
@@ -495,10 +493,8 @@
           <div class="row justify-content-center" >
             &nbsp;
             <a href="https://www.linkedin.com/in/vaishnavi-kantilal-sharma/" target="_blank" class="fa-2x icon-feature fa fa-linkedin" style="font-size:25px"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="https://www.instagram.com/vaishu4455/" target="_blank" class="fa-2x icon-feature  fa fa-instagram" style="font-size:25px"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://www.youtube.com/channel/UCGgieCJkhwenNs08-xqY1ZA" target="_blank" class="fa-2x icon-feature  fa fa-youtube" style="font-size:25px"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://github.com/vaishnavi636" target="_blank" class="fa-2x icon-feature  fa fa-github" style="font-size:25px"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="https://www.facebook.com/profile.php?id=100024550990507" target="_blank" class="fa-2x icon-feature  fa fa-facebook" style="font-size:25px"></a><br />
 
             <br />
 
