--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </section>
   <section class="aboutsection" id="about">
     <h2 class="heading-center large2">About Me</h2>
-    <h3 class="cta-heading">I'm Vaishnavi Sharma. <br /><br />I'm from Malegaon (Washim), Maharashtra, India. <br />Previously, I completed post-graduation in Computer Application from Modern College of Science Shivajinagar, Pune. <br />Currently, I am working
+    <h3 class="cta-heading">I'm Vaishnavi Sharma. <br /><br />I'm from Pune, India. <br />Previously, I completed post-graduation in Computer Application from Modern College of Science Shivajinagar, Pune. <br />Currently, I am working
       at Capgemini as the position of Software Developer since 2 July 2021. This is my updated resume please download it. <br /> Thank you! </h3>
     <a class="cv btn btn-outline-dark btn-lg download-btn" onClick="openTab(this)" herf="#" name="public/images/VaishnaviSharma_Resume.pdf"> <i class="fas fa-file-contract"></i> Download Resume</a>
 
@@ -244,7 +244,7 @@
           <div class="card-body">
             <p class="skill1 large3" class="card-text">
               <b>Node.js</b><br />
-              I have worked as Node.js Developer in an Internship<br />
+              I have worked as Node.js Developer<br />
               <b>HouseHear Project</b>
               Contribution: Making APIs in Node.js
             </p>
@@ -264,7 +264,7 @@
         <div class="card p-3 text-end">
 
           <p class="skill1 large3" class="card-text"><b>Vue.js and Nuxt.js</b><br />
-            I have worked as Project Manager in an Internship</p>
+            I have worked as NodeJS Developer</p>
           <p class="skill1" class="card-text"><b>Hashcodec Project</b><br />
             The website named Hashcocdec is built in Vue.js, Nuxt.js, Node.js. </p>
         </div>
@@ -295,7 +295,7 @@
         <div class="carousel-item test1">
           <p class="large">College Level (M.S.c 2nd SEM) </p>
           <h2 class="large3">Object Tracking in Real-time Using OpenCV Python </h2>
-          <p class="large3">Jun 2020 – Present.</p>
+          <p class="large3">Jun 2020</p>
           <p class="large3">In this mini project, we can select the object
             and track the real-time while object detecting it shows
             TRACKING on-screen and if we lost the object it will show LOST
@@ -483,7 +483,7 @@
 <br />
           <div class="row">
             <i class="icon-feature fas fa-mail-bulk fa-2x"></i>&nbsp &nbsp &nbsp
-<p class="contact-content">Email:&nbsp &nbsp <a class="skill1" href="mailto:vaishnavisharma0045@gmail.com">vaishnavisharma0045@gmail.com</a></p>
+<p class="contact-content">Email:&nbsp &nbsp <a class="skill1" href="mailto:vaishnavisharma4490@gmail.com">vaishnavisharma4490@gmail.com</a></p>
 
           </div>
           <br>
