--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
        
     <div class="row">
       <div class="row align-items-md-stretch">
-
+ <div class="col-md-12  col-lg-4 col-sm-12 expe">
         
           <div class="h-100 p-5 card edu feature-box">
             <h2 class="large">Comapny Name</h2>
@@ -191,7 +191,7 @@
           </div>
         </div>
       </div>
-
+      </div>
     </div>
   </section>
 
