--- a/index.html
+++ b/index.html
@@ -128,20 +128,22 @@
   </section>
 
   <!-- experience section -->
-  <section class="experience" id="experience">
+ <section class="experience" id="experience">
   <h2 class="heading-center large2">My Experience</h2>
   <div class="container">
-    <div class="row">
+    <div class="row mb-4">
       <!-- Experience 1 -->
-      <div class="col-lg-3 col-md-6 col-sm-12 expe">
-        <div class="h-100 p-3 card edu feature-box">
-          <h2 class="large">Company Name</h2>
-          <p class="large">Tata Consultancy Services</p>
-          <p class="large">Current: From 5 Dec 2022, Pune SP1</p>
-          <p class="large">Position: Software Developer at TCS, JLR Project. Working in DesignOPS Team Figma</p>
-          <p class="large">Projects: Figma Lead Developer. Creating Figma Plugins</p>
-          <div class="button">
-            <a class="cv btn btn-outline-light btn-lg download-btn" onClick="openTab(this)" name="public/images/VaishnaviSharma_8805785260_vaishnavisharma0045@gmail.com_CV.pdf">
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+          <div class="card-body">
+            <h5 class="card-title">Tata Consultancy Services</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Software Developer</h6>
+            <p class="card-text">
+              Current: From 5 Dec 2022, Pune SP1<br>
+              Position: Software Developer at TCS, JLR Project<br>
+              Projects: Figma Lead Developer, Creating Figma Plugins
+            </p>
+            <a class="btn btn-outline-primary" onClick="openTab(this)" name="public/images/VaishnaviSharma_Resume.pdf">
               <i class="fas fa-file-contract"></i> Resume
             </a>
           </div>
@@ -149,46 +151,60 @@
       </div>
 
       <!-- Experience 2 -->
-      <div class="col-lg-3 col-md-6 col-sm-12 expe">
-        <div class="h-100 p-3 card edu feature-box">
-          <h2 class="large">Company Name</h2>
-          <p class="large">Capgemini</p>
-          <p class="large">2 July 2021</p>
-          <p class="large">Position: Software Developer</p>
-          <p class="large">Location: Pune (Talwade)</p>
-          <a class="cv btn btn-outline-light btn-lg download-btn" onClick="openTab(this)" name="public/images/JLRKudos.jpg">
-            <i class="fas fa-file-contract"></i> JLR 2024 Nomination
-          </a>
-          <a class="cv btn btn-outline-light btn-lg download-btn" onClick="openTab(this)" name="public/images/On_The_Spot_Award">
-            <i class="fas fa-file-contract"></i> TCS On the Spot Award
-          </a>
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+          <div class="card-body">
+            <h5 class="card-title">Capgemini</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Software Developer</h6>
+            <p class="card-text">
+              Joined: 2 July 2021, Pune (Talwade)<br>
+              Projects: Worked on JLR Project<br>
+              Achievements: On the Spot Award, JLR 2024 Nomination
+            </p>
+            <a class="btn btn-outline-primary" onClick="openTab(this)" name="public/images/JLRKudos.jpg">
+              <i class="fas fa-award"></i> JLR Nomination
+            </a>
+            <a class="btn btn-outline-primary" onClick="openTab(this)" name="public/images/On_The_Spot_Award">
+              <i class="fas fa-trophy"></i> On the Spot Award
+            </a>
+          </div>
         </div>
       </div>
+    </div>
 
+    <div class="row">
       <!-- Experience 3 -->
-      <div class="col-lg-3 col-md-6 col-sm-12 expe">
-        <div class="h-100 p-3 card edu feature-box">
-          <h2 class="large">Company Name</h2>
-          <p class="large">Supero Software Private Limited</p>
-          <p class="large">Pursuing: Till 23 June 2021</p>
-          <p class="large">Position: Node.js Developer, Web Developer, Project Manager</p>
-          <p class="large">Projects: HouseHear, Hashcode</p>
-          <a class="cv btn btn-outline-light btn-lg download-btn" onClick="openTab(this)" name="public/images/SuperoSoftware-company certificate.pdf">
-            <i class="fas fa-file-contract"></i> Certificate
-          </a>
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+          <div class="card-body">
+            <h5 class="card-title">Supero Software Private Limited</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Node.js Developer</h6>
+            <p class="card-text">
+              Duration: Till 23 June 2021<br>
+              Position: Node.js Developer, Web Developer, Project Manager<br>
+              Projects: HouseHear, Hashcode
+            </p>
+            <a class="btn btn-outline-primary" onClick="openTab(this)" name="public/images/SuperoSoftware-company certificate.pdf">
+              <i class="fas fa-file-contract"></i> Certificate
+            </a>
+          </div>
         </div>
       </div>
 
       <!-- Experience 4 -->
-      <div class="col-lg-3 col-md-6 col-sm-12 expe">
-        <div class="h-100 p-3 card edu feature-box">
-          <h2 class="large">Company Name</h2>
-          <p class="large">Global Counter Terrorism Council</p>
-          <p class="large">1 month Nov 2020</p>
-          <p class="large">Position: Web Developer, WordPress Developer</p>
-          <a class="cv btn btn-outline-light btn-lg download-btn" onClick="openTab(this)" name="public/images/GCTC-Certificate.pdf">
-            <i class="fas fa-file-contract"></i> Certificate
-          </a>
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+          <div class="card-body">
+            <h5 class="card-title">Global Counter Terrorism Council</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Web Developer</h6>
+            <p class="card-text">
+              Duration: 1 month (Nov 2020)<br>
+              Position: Web Developer, WordPress Developer
+            </p>
+            <a class="btn btn-outline-primary" onClick="openTab(this)" name="public/images/GCTC-Certificate.pdf">
+              <i class="fas fa-file-contract"></i> Certificate
+            </a>
+          </div>
         </div>
       </div>
     </div>
