--- a/index.html
+++ b/index.html
@@ -128,22 +128,22 @@
   </section>
 
   <!-- experience section -->
- <section class="experience" id="experience">
+<section class="experience" id="experience" style="background-color: #6a0dad; color: #fff;">
   <h2 class="heading-center large2">My Experience</h2>
   <div class="container">
     <div class="row mb-4">
       <!-- Experience 1 -->
       <div class="col-lg-6 col-md-6 col-sm-12">
-        <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+        <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
-            <h5 class="card-title">Tata Consultancy Services</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Software Developer</h6>
+            <h5 class="card-title" style="color: #fff;">Tata Consultancy Services</h5>
+            <h6 class="card-subtitle mb-2 text-muted" style="color: #d3d3d3;">Software Developer</h6>
             <p class="card-text">
               Current: From 5 Dec 2022, Pune SP1<br>
               Position: Software Developer at TCS, JLR Project<br>
               Projects: Figma Lead Developer, Creating Figma Plugins
             </p>
-            <a class="btn btn-outline-primary" onClick="openTab(this)" name="public/images/VaishnaviSharma_Resume.pdf">
+            <a class="btn btn-outline-light" onClick="openTab(this)" name="public/images/VaishnaviSharma_Resume.pdf">
               <i class="fas fa-file-contract"></i> Resume
             </a>
           </div>
@@ -152,19 +152,19 @@
 
       <!-- Experience 2 -->
       <div class="col-lg-6 col-md-6 col-sm-12">
-        <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+        <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
-            <h5 class="card-title">Capgemini</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Software Developer</h6>
+            <h5 class="card-title" style="color: #fff;">Capgemini</h5>
+            <h6 class="card-subtitle mb-2 text-muted" style="color: #d3d3d3;">Software Developer</h6>
             <p class="card-text">
               Joined: 2 July 2021, Pune (Talwade)<br>
               Projects: Worked on JLR Project<br>
               Achievements: On the Spot Award, JLR 2024 Nomination
             </p>
-            <a class="btn btn-outline-primary" onClick="openTab(this)" name="public/images/JLRKudos.jpg">
+            <a class="btn btn-outline-light" onClick="openTab(this)" name="public/images/JLRKudos.jpg">
               <i class="fas fa-award"></i> JLR Nomination
             </a>
-            <a class="btn btn-outline-primary" onClick="openTab(this)" name="public/images/On_The_Spot_Award">
+            <a class="btn btn-outline-light" onClick="openTab(this)" name="public/images/On_The_Spot_Award">
               <i class="fas fa-trophy"></i> On the Spot Award
             </a>
           </div>
@@ -175,16 +175,16 @@
     <div class="row">
       <!-- Experience 3 -->
       <div class="col-lg-6 col-md-6 col-sm-12">
-        <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+        <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
-            <h5 class="card-title">Supero Software Private Limited</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Node.js Developer</h6>
+            <h5 class="card-title" style="color: #fff;">Supero Software Private Limited</h5>
+            <h6 class="card-subtitle mb-2 text-muted" style="color: #d3d3d3;">Node.js Developer</h6>
             <p class="card-text">
               Duration: Till 23 June 2021<br>
               Position: Node.js Developer, Web Developer, Project Manager<br>
               Projects: HouseHear, Hashcode
             </p>
-            <a class="btn btn-outline-primary" onClick="openTab(this)" name="public/images/SuperoSoftware-company certificate.pdf">
+            <a class="btn btn-outline-light" onClick="openTab(this)" name="public/images/SuperoSoftware-company certificate.pdf">
               <i class="fas fa-file-contract"></i> Certificate
             </a>
           </div>
@@ -193,15 +193,15 @@
 
       <!-- Experience 4 -->
       <div class="col-lg-6 col-md-6 col-sm-12">
-        <div class="card shadow-sm p-3 mb-5 bg-white rounded">
+        <div class="card shadow-sm p-3 mb-5 bg-transparent border-light rounded">
           <div class="card-body">
-            <h5 class="card-title">Global Counter Terrorism Council</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Web Developer</h6>
+            <h5 class="card-title" style="color: #fff;">Global Counter Terrorism Council</h5>
+            <h6 class="card-subtitle mb-2 text-muted" style="color: #d3d3d3;">Web Developer</h6>
             <p class="card-text">
               Duration: 1 month (Nov 2020)<br>
               Position: Web Developer, WordPress Developer
             </p>
-            <a class="btn btn-outline-primary" onClick="openTab(this)" name="public/images/GCTC-Certificate.pdf">
+            <a class="btn btn-outline-light" onClick="openTab(this)" name="public/images/GCTC-Certificate.pdf">
               <i class="fas fa-file-contract"></i> Certificate
             </a>
           </div>
